# terpod

./: CHANGELOG.md  Main.hs  README.md  cabal.project  terpod.cabal
.github/workflows/: code-quality.yml  publish.yml
exec/: CLI.hs  Main.hs
lib/: Byte.hs  Network.hs
lib/Data/Tuple/: Custom.hs
lib/Terpod/: Cache.hs  Config.hs  Episode.hs  Podcast.hs
lib/Text/Feed/Query/: Custom.hs
lib/Toml/Codec/BiMap/Conversion/: Custom.hs
src/: CLI.hs  Cache.hs  Config.hs  Episode.hs  Main.hs  Network.hs  Podcast.hs
src/Data/: Timestamp.hs
src/Data/Functor/: Custom.hs
src/Data/String/: Custom.hs
src/Data/Tuple/: Custom.hs
src/Text/Feed/Query/: Custom.hs
test/Terpod/: EpisodeSpec.hs
