cabal-version:      >=2.0
version:            0.1.0
license:            AGPL
author:             Sam A. Horvath-Hunt
maintainer:         terpod@samhh.com
name:               terpod
build-type:         Simple
extra-source-files: CHANGELOG.md

executable terpod
  hs-source-dirs:     src/
  main-is:            Main.hs
  build-depends:
      ansi-terminal         ^>=0.11
    , async                 ^>=2.2
    , base                  ^>=4.14
    , containers            ^>=0.6
    , directory             ^>=1.3
    , extra                 ^>=1.7
    , feed                  ^>=1.3
    , filepath              ^>=1.4
    , http-client           ^>=0.7
    , lens                  ^>=4.19
    , newtype-generics      ^>=0.5
    , optparse-applicative  ^>=0.16
    , relude                ^>=0.7
    , rio                   ^>=0.1
    , text                  ^>=1.2
    , time                  ^>=1.9
    , tomland               ^>=1.3
    , tuple                 ^>=0.3
    , wreq                  ^>=0.5
    , xdg-basedir           ^>=0.2

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    StrictData
    TupleSections

  ghc-options:        -Wall -fwrite-ide-info -hiedir=.hie
  default-language:   Haskell2010
  other-modules:
    Cache
    CLI
    Config
    Data.Functor.Custom
    Data.String.Custom
    Data.Tuple.Custom
    Episode
    Podcast
    Text.Feed.Query.Custom
    Toml.Codec.BiMap.Conversion.Custom
