cabal-version:             2.2
version:                   0.2.0
license:                   AGPL-3.0-only
author:                    Sam A. Horvath-Hunt
maintainer:                terpod@samhh.com
name:                      terpod
build-type:                Simple
extra-source-files:        CHANGELOG.md

common common
  default-language:        Haskell2010
  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    StrictData
    TupleSections
  ghc-options:
    -Wall
  build-depends:
      base                 ^>=4.14
    , relude               ^>=0.7
    , containers           ^>=0.6
    , extra                ^>=1.7
    , microlens            ^>=0.4
    , newtype-generics     ^>=0.5
    , text                 ^>=1.2
    , tuple                ^>=0.3
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)

executable terpod
  import:                  common
  hs-source-dirs:          exec/
  main-is:                 Main.hs
  build-depends:
      terpod
    , ansi-terminal        ^>=0.11
    , async                ^>=2.2
    , feed                 ^>=1.3
    , optparse-applicative ^>=0.16
  other-modules:
    Paths_terpod
    CLI

library
  import:                  common
  hs-source-dirs:          lib/
  build-depends:
      bytestring           ^>=0.10
    , conduit              ^>=1.3
    , directory            ^>=1.3
    , feed                 ^>=1.3
    , filepath             ^>=1.4
    , http-client          ^>=0.7
    , http-conduit         ^>=2.3
    , newtype-generics     ^>=0.5
    , time                 ^>=1.9
    , tomland              ^>=1.3
    , wreq                 ^>=0.5
    , xdg-basedir          ^>=0.2
  exposed-modules:
    Byte
    Data.Functor.Custom
    Data.Tuple.Custom
    Terpod.Cache
    Terpod.Config
    Terpod.Episode
    Terpod.Podcast
  other-modules:
    Network
    Text.Feed.Query.Custom
    Toml.Codec.BiMap.Conversion.Custom

test-suite test-terpod
  import:                  common
  hs-source-dirs:          test/
  main-is:                 Spec.hs
  type:                    exitcode-stdio-1.0
  build-depends:
      terpod
    , hedgehog             ^>=1.0
    , hspec                ^>=2.7
    , hspec-hedgehog       ^>=0.0.1
  build-tool-depends:
    hspec-discover:hspec-discover
  other-modules:
    Terpod.EpisodeSpec
